--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <article>
                 <div class="project_card">
                     <h4>MystikScope 🔮</h4>
-                    <img class="card_img" src="/img/astro.png" alt="">
+                    <img class="card_img" src="img/astro.png" alt="">
                     <p>Application web permettant de consulter son horoscope quotidien selon son signe astrologique ✨
                     <br>
                     💡<em>Fonctionnalités : intégration d'une API externe, gestion des requêtes HTTP, affichage dynamique des résultats en JavaScript Vanilla.
@@ -38,7 +38,7 @@
                 </div>
                 <div class="project_card">
                     <h4>Potionix ⚗️</h4>
-                    <img class="card_img" src="/img/astro.png" alt="">
+                    <img class="card_img" src="img/astro.png" alt="">
                     <p>Application ludique de création de potions magiques à partir d’ingrédients sélectionnés par l'utilisateur 🫧
                     <br> 
                     <em>🧪 Fonctionnalités : génération aléatoire de résultats, gestion d’événements, logique conditionnelle.
@@ -48,7 +48,7 @@
                 </div>
                 <div class="project_card">
                     <h4>Miaougotchi 🐱</h4>
-                    <img class="card_img" src="/img/astro.png" alt="">
+                    <img class="card_img" src="img/astro.png" alt="">
                     <p>Application interactive inspirée des Tamagotchis, où l’on prend soin d’un petit chat virtuel 🐈‍⬛
                     <br>
                     <em>🐾 Fonctionnalités : gestion de l’état de l’animal (faim, sommeil, humeur), timers, interactions utilisateur.
@@ -63,7 +63,7 @@
             <h3>À propos</h3>
                 <article id="art_about">
                     <p class="p_about">Je m'appelle Chlöe, développeuse web en alternance, passionnée par la création d’interfaces accessibles, intuitives et pleines de douceur.</p>
-                    <img id="img_about" src="/img/pictureofme.png" alt="">
+                    <img id="img_about" src="img/pictureofme.png" alt="">
                     <p class="p_about">Actuellement en formation chez <a href="https://cloud-campus.fr/" target="_blank">Cloud Campus</a>, je poursuis mes études dans le développement web afin d’approfondir mes compétences techniques et créatives. 
                         <br> 
                         J’ai déjà acquis de solides bases en HTML, CSS et JavaScript, et je suis impatiente de continuer à progresser au sein d’une entreprise engagée.
