--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             <h3>Mes projets</h3>
             <article>
                 <div class="project_card">
-                    <h4>MystikScope 🔮</h4>
-                    <img class="card_img" src="img/astro.png" alt="">
+                    <div class="card_img_container">
+                        <h4>MystikScope 🔮</h4>
+                        <img class="card_img" src="img/astro.png" alt="">
+                    </div>
                     <p>Application web permettant de consulter son horoscope quotidien selon son signe astrologique ✨
                     <br>
                     💡<em>Fonctionnalités : intégration d'une API externe, gestion des requêtes HTTP, affichage dynamique des résultats en JavaScript Vanilla.
@@ -37,8 +39,10 @@
                     <a href="https://github.com/tonlien" class="btn" target="_blank">Voir sur GitHub</a>
                 </div>
                 <div class="project_card">
-                    <h4>Potionix ⚗️</h4>
-                    <img class="card_img" src="img/astro.png" alt="">
+                    <div class="card_img_container">
+                        <h4>Potionix ⚗️</h4>
+                        <img class="card_img" src="img/astro.png" alt="">
+                    </div>
                     <p>Application ludique de création de potions magiques à partir d’ingrédients sélectionnés par l'utilisateur 🫧
                     <br> 
                     <em>🧪 Fonctionnalités : génération aléatoire de résultats, gestion d’événements, logique conditionnelle.
@@ -47,8 +51,10 @@
                     <a href="https://github.com/tonlien" class="btn" target="_blank">Voir sur GitHub</a>
                 </div>
                 <div class="project_card">
-                    <h4>Miaougotchi 🐱</h4>
-                    <img class="card_img" src="img/astro.png" alt="">
+                    <div class="card_img_container">
+                        <h4>Miaougotchi 🐱</h4>
+                        <img class="card_img" src="img/astro.png" alt="">
+                    </div>
                     <p>Application interactive inspirée des Tamagotchis, où l’on prend soin d’un petit chat virtuel 🐈‍⬛
                     <br>
                     <em>🐾 Fonctionnalités : gestion de l’état de l’animal (faim, sommeil, humeur), timers, interactions utilisateur.
@@ -60,16 +66,13 @@
         </section>
 
         <section id="about">
-            <h3>À propos</h3>
+            <h3 id="title">À propos</h3>
                 <article id="art_about">
                     <p class="p_about">Je m'appelle Chlöe, développeuse web en alternance, passionnée par la création d’interfaces accessibles, intuitives et pleines de douceur.</p>
                     <img id="img_about" src="img/pictureofme.png" alt="">
                     <p class="p_about">Actuellement en formation chez <a href="https://cloud-campus.fr/" target="_blank">Cloud Campus</a>, je poursuis mes études dans le développement web afin d’approfondir mes compétences techniques et créatives. 
-                        <br> 
                         J’ai déjà acquis de solides bases en HTML, CSS et JavaScript, et je suis impatiente de continuer à progresser au sein d’une entreprise engagée.
-                        <br>
                         En dehors du développement, j’adore les jeux vidéo comme Tomb Raider, Les Sims 4 ou Minecraft — mon rêve serait de développer un jour mon propre jeu ✨.
-                        <br>
                         Je suis aussi passionnée par les activités créatives comme le coloriage, le diamond painting, le kalimba ou la poterie… et je partage mon quotidien avec mes adorables chats 🐾.</p>
                     <div class="links_about">
                         <a href="CV_Chloe_Alternance_Web.pdf.pdf" target="_blank" class="btn" download="CV_Chloe_Alternance_Web.pdf">Mon CV </a>
