ajout du site mystikscope

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     </div>
                     <p>Application web permettant de consulter son horoscope quotidien selon son signe astrologique ✨
                     <br>
-                    💡<em>Fonctionnalités : intégration d'une API externe, gestion des requêtes HTTP, affichage dynamique des résultats en JavaScript Vanilla.
+                    💡<em>Fonctionnalités : intégration d'une API externe, affichage dynamique des résultats en JavaScript Vanilla.
                     <br>
                         Ce projet m’a permis de consolider mes compétences en manipulation du DOM et en consommation d’API.</em></p>
-                    <a href="https://github.com/tonlien" class="btn" target="_blank">Voir sur GitHub</a>
+                    <a href="https://mystikscope.onrender.com/" class="btn" target="_blank">Voir le site</a>
                 </div>
                 <div class="project_card">
                     <div class="card_img_container">
