dernière modifications des cards

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <div class="project_card">
                     <div class="card_img_container">
                         <h4>MystikScope 🔮</h4>
-                        <img class="card_img" src="img/astro.png" alt="">
+                        <img class="card_img" src="img/mystikscope.png" alt="">
                     </div>
                     <p>Application web permettant de consulter son horoscope quotidien selon son signe astrologique ✨
                     <br>
-                    💡<em>Fonctionnalités : intégration d'une API externe, affichage dynamique des résultats en JavaScript Vanilla.
+                    💡<em>Fonctionnalités : intégration d'une API externe, affichage dynamique des résultats avec EJS.
                     <br>
                         Ce projet m’a permis de consolider mes compétences en manipulation du DOM et en consommation d’API.</em></p>
                     <a href="https://mystikscope.onrender.com/" class="btn" target="_blank">Voir le site</a>
@@ -43,14 +43,15 @@
                         <h4>Potionix ⚗️</h4>
                         <img class="card_img" src="img/astro.png" alt="">
                     </div>
+                    <h5 id="wip">🚧 Projet en cours de développement 🚧</h5>
                     <p>Application ludique de création de potions magiques à partir d’ingrédients sélectionnés par l'utilisateur 🫧
                     <br> 
                     <em>🧪 Fonctionnalités : génération aléatoire de résultats, gestion d’événements, logique conditionnelle.
                     <br>
-                        Un projet conçu pour m’entraîner à la logique JavaScript tout en cultivant un univers créatif.</em></p>
-                    <a href="https://github.com/tonlien" class="btn" target="_blank">Voir sur GitHub</a>
+                        <!-- Un projet conçu pour m’entraîner à la logique JavaScript tout en cultivant un univers créatif.</em></p> -->
+                    <a href="https://github.com/ChloeConstan/Potionix" class="btn" target="_blank">Voir sur GitHub</a>
                 </div>
-                <div class="project_card">
+                <!-- <div class="project_card">
                     <div class="card_img_container">
                         <h4>Miaougotchi 🐱</h4>
                         <img class="card_img" src="img/astro.png" alt="">
@@ -61,7 +62,7 @@
                     <br>
                         Ce projet m’a permis de mettre en œuvre une logique de jeu simple en JavaScript, tout en développant une interface engageante. </em></p>
                     <a href="https://github.com/tonlien" class="btn" target="_blank">Voir sur GitHub</a>
-                </div>
+                </div> -->
             </article>
         </section>
 
